feat: add jdtls (Eclipse JDT Language Server) install